--- a/package.json
+++ b/package.json
@@ -19,10 +19,7 @@
     "validation",
     "dotenv"
   ],
-  "activationEvents": [
-    "onLanguage:dotenv",
-    "workspaceContains:**/.env*"
-  ],
+  "activationEvents": [],
   "main": "./dist/extension.js",
   "contributes": {
     "commands": [
